fixing gap buttons header

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -14,7 +14,7 @@
     justify-content: space-between;
 
     &:last-child {
-      gap: 1rem;
+      gap: 0.5rem;
 
       @media (max-width: 720px) {
         margin-top: 1rem;
